--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -629,3 +629,239 @@
 }
 
 /* END HERO SECTION */
+
+/* WHY CHOOSE US SECTION STARTED */
+
+.choose .container {
+    padding: 60px 30px;
+    display: flex;
+    flex-direction: column;
+}
+.choose .row {
+    display: flex;
+}
+
+.choose .row h2 {
+    font-size: 40px;
+    font-family: poppins;
+    font-weight: 600;
+    text-align: center;
+}
+
+.choose .boxes {
+
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+    padding: 30px 0px;
+}
+
+.choose .box {
+    position: relative;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 10px;
+    justify-content: center;
+}
+
+.choose .box h3 {
+    font-size: 26px;
+    text-align: center;
+    font-family: 'Poppins';
+    line-height: 34px;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.choose .box::before {
+    content: ""; /* Add this line to ensure the pseudo-element is rendered */
+    position: absolute;
+    border-radius: 10px;
+    top: 0;
+    left: 0;
+    border-top: 0 solid #0044e3;
+    border-left: 0 solid #0044e3;
+    width: 0;
+    height: 0;
+    z-index: 1;
+    transition: all 0.2s ease-in;
+}
+
+.choose .box:hover::before {
+
+    border-radius: 10px;
+    border-top: 3px solid #0044e3;
+    border-left: 3px solid #0044e3;
+    width: 100%;
+    height: 100%;
+}
+
+.choose .box::after {
+    content: ""; /* Add this line to ensure the pseudo-element is rendered */
+    position: absolute;
+    border-radius: 10px;
+    right: 0;
+    bottom: 0;
+    border-top: 0 solid #0044e3;
+    border-left: 0 solid #0044e3;
+    width: 0;
+    height: 0;
+    z-index: 1;
+    transition: all 0.2s ease-in;
+}
+
+.choose .box:hover::after {
+
+    border-radius: 10px;
+    border-right: 3px solid #0044e3;
+    border-bottom: 3px solid #0044e3;
+    width: 100%;
+    height: 100%;
+}
+
+.choose .box:hover a.request {
+
+    text-decoration: none;
+    padding: 10px 28px;
+    background: black;
+    border-radius: 10px;
+    color: white;
+    border: 2px solid transparent;
+    background-clip: padding-box;
+    transition: all 0.5s ease;
+}
+
+.choose .box:hover .icon img {
+
+    background-color: black;
+    border-radius: 100px;
+    padding: 10px;
+    /* transform: translateY(-10px) scale(1.05); */
+    transform: rotateY(360deg) rotateX(0deg); /* 3D rotation */
+
+
+    transition: all 0.4s ease-in;
+}
+
+.choose .box .icon 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 14px;
+}
+
+.choose .box .icon img {
+
+    background-color: #0044e3;
+    border-radius: 100px;
+    padding: 10px;
+    width: 20%;
+    transition: all 0.4s ease-in;
+}
+
+
+.choose .box p {
+    font-size: 18px;
+    font-family: 'Poppins';
+    font-weight: 300;
+    line-height: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.choose .btn {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.choose .box a.request {
+    text-decoration: none;
+    padding: 10px 28px;
+    background: #175cff;
+    border-radius: 10px;
+    color: white;
+    border: 2px solid transparent;
+    background-clip: padding-box;
+    
+    transition: all 0.5s ease;
+}
+
+@media (max-width: 1366px) {
+
+    .choose .box h3 {
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Poppins';
+        line-height: 26px;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+
+
+    .choose .box p {
+    font-size: 16px;
+    font-family: 'Poppins';
+    font-weight: 300;
+    line-height: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+}
+
+@media (max-width: 1024px) {
+
+    .choose .boxes {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr );
+        gap: 20px;
+        padding: 30px 0px;
+    }
+    
+}
+
+@media (max-width: 991px) {
+
+    .choose .container {
+        padding: 60px 40px;
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+
+@media (max-width: 600px) {
+
+    .choose .boxes {
+        display: grid;
+        grid-template-columns: repeat(1, 3fr );
+        gap: 40px;
+        padding: 30px 0px;
+    }
+
+    .choose .box {
+        position: relative;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        border-radius: 10px;
+        justify-content: center;
+    }
+
+    .choose .row h2 {
+        font-size: 25px;
+        font-family: poppins;
+        font-weight: 600;
+        text-align: center;
+    }
+
+}
+
+
+
+/* WHY CHOOUSE US SECTION END */
