--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1198,3 +1198,272 @@
 
 }
 /* END THIRD SECTION TABS */
+
+/* BEGIN SERVICES SECTION */
+
+.services .container {
+        padding: 120px 30px;
+        display: flex;
+        flex-direction: column;
+    }
+
+.services .row1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+.services .row1 span {
+
+    font-size: 20px;
+    font-family: poppins;
+}
+
+.services .row1 h2 {
+
+        font-size: 40px;
+        font-family: poppins;
+        font-weight: 600;
+        text-align: center;
+        margin-top: 10px;
+    
+}
+
+.services .services-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 0px;
+}
+
+.services .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 33.33%;
+}
+
+.services .services-box img {
+    height: 205px;
+    object-fit: cover;
+    width: 70%;
+    border: 6px solid rgb(237, 233, 233);
+    border-radius: 40px;
+    transform: translateY(38px);
+    transition: all 0.4s ease-in;
+}
+
+.services .cta {
+    padding: 60px 30px 30px 30px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    border-radius: 40px;
+    height: 235px;
+}
+
+.services .cta h3 {
+
+        font-size: 26px;
+        text-align: center;
+        font-family: 'Poppins';
+        line-height: 34px;
+        font-weight: 500;
+        margin-bottom: 20px;
+}
+
+.services .cta p {
+    font-size: 18px;
+    font-family: 'Poppins';
+    font-weight: 300;
+    line-height: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.services .cta .btn {
+
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-direction: row;
+    margin-top: 10px;
+    transform: translateY(0px);
+    transition: all 0.5s ease;
+}
+
+.services .cta .btn a.request {
+    text-decoration: none;
+    padding: 10px 28px;
+    background: #175cff;
+    border-radius: 10px;
+    color: white;
+    border: 2px solid transparent;
+    background-clip: padding-box;
+    transform: translateY(5px);
+    transition: all 0.5s ease;
+}
+
+.services .services-box img:hover {
+
+    transform: translateY(10px);
+    transition: all 0.4s ease-in;
+}
+
+.services .cta .btn:hover {
+    
+    transform: translateY(-15px);
+    transition: all 0.5s ease;
+}
+
+@media (max-width: 1366px) {
+
+    .services .cta h3 {
+
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Poppins';
+        line-height: 26px;
+        font-weight: 500;
+        margin-bottom: 10px;
+    }
+
+    .services .cta p {
+        font-size: 16px;
+        font-family: 'Poppins';
+        font-weight: 300;
+        line-height: 30px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .services .services-box img {
+        height: 160px;
+        object-fit: cover;
+        width: 70%;
+        border: 6px solid rgb(237, 233, 233);
+        border-radius: 40px;
+        transform: translateY(38px);
+        transition: all 0.4s ease-in;
+    }
+
+    .services .cta .btn a.request {
+        text-decoration: none;
+        padding: 10px 28px;
+        background: #175cff;
+        border-radius: 10px;
+        color: white;
+        border: 2px solid transparent;
+        background-clip: padding-box;
+        transform: translateY(20px);
+        transition: all 0.5s ease;
+    }
+}
+
+@media (max-width: 1024px) {
+
+.services .services-box img {
+    height: 160px;
+    object-fit: cover;
+    width: 80%;
+    border: 6px solid rgb(237, 233, 233);
+    border-radius: 40px;
+    transform: translateY(38px);
+    transition: all 0.4s ease-in;
+}
+}
+
+@media (max-width: 991px) {
+
+
+.services .container {
+    padding: 60px 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.services .cta {
+    padding: 60px 20px 30px 20px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    border-radius: 40px;
+    height: 224px;
+}
+
+}
+
+@media (max-width: 880px) {
+
+
+    .services .services-box {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        padding: 0px;
+    }
+
+    .services .box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .services .row1 h2 {
+        font-size: 25px;
+        font-family: poppins;
+        font-weight: 600;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+.services .services-box {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 20px;
+    padding: 0px;
+}
+.services .services-box img {
+    height: 260px;
+    object-fit: cover;
+    width: 80%;
+    border: 6px solid rgb(237, 233, 233);
+    border-radius: 40px;
+    transform: translateY(38px);
+    transition: all 0.4s ease-in;
+}
+}
+
+@media (max-width: 440px) {
+
+    .services .services-box img {
+        height: 200px;
+        object-fit: cover;
+        width: 80%;
+        border: 6px solid rgb(237, 233, 233);
+        border-radius: 40px;
+        transform: translateY(38px);
+        transition: all 0.4s ease-in;
+    }
+
+    .services .cta .btn a.request {
+        text-decoration: none;
+        padding: 10px 28px;
+        background: #175cff;
+        border-radius: 10px;
+        color: white;
+        border: 2px solid transparent;
+        background-clip: padding-box;
+        transform: translateY(19px);
+        transition: all 0.5s ease;
+    }
+
+
+
+
+}
+
+/* END SERVICES SECTION */
