--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1460,10 +1460,256 @@
         transform: translateY(19px);
         transition: all 0.5s ease;
     }
-
-
-
-
 }
 
 /* END SERVICES SECTION */
+
+/* BEGIN PRICE SECTION */
+
+.price {
+
+    background-color: #f4f4f4;
+}
+
+.price .container {
+
+    padding: 120px 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.price .row1 {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.price .row1 h2 {
+
+    font-size: 40px;
+    font-family: poppins;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.price .row2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 40px;
+    gap: 20px;
+}
+
+.price .row2 .pricebox {
+    padding: 50px;
+    display: flex;
+    width: 33.33%;
+    flex-direction: column;
+}
+
+.price .row2 #pricebox1 {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.price .row2 h3 {
+
+    color: #0044e3;
+    font-size: 20px;
+    font-family: poppins;
+    font-weight: 600;
+}
+
+.price .priceline span.price {
+
+    font-size: 40px;
+    font-weight: 600;
+    font-family: 'Poppins';
+    background-color: transparent;
+}
+
+.price .priceline span {
+
+    font-size: 16px;
+    color: black;
+    font-weight: normal;
+    font-family: poppins;
+}
+
+.price .priceline {
+
+    padding-bottom: 30px;
+    border-bottom: 1px dashed rgb(208, 205, 205)  ;
+}
+
+.price .row2 ul {
+    padding: 30px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+
+.price .row2 li {
+
+    font-size: 15px;
+    font-family: poppins;
+    font-weight: 300;
+}
+
+.price .row2 a.request {
+    text-decoration: none;
+    padding: 10px 28px;
+    background: #175cff;
+    border-radius: 10px;
+    color: white;
+    border: 2px solid transparent;
+    background-clip: padding-box;
+    width: 50%;
+    text-align: center;
+    transition: all 0.5s ease;
+}
+
+
+.price .row2 a.request:hover {
+
+    background-color: black;
+}
+
+.price .row2 #pricebox2 {
+
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,68,227,1) 51%, rgba(0,212,255,1) 100%);
+    border-radius: 10px;
+}
+
+.price .row2 #pricebox2 h3 {
+    color: white;
+    font-size: 20px;
+    font-family: poppins;
+    font-weight: 600;
+}
+
+.price #pricebox2 .priceline span.price {
+    font-size: 40px;
+    font-weight: 600;
+    font-family: 'Poppins';
+    background-color: transparent;
+    color: white;
+}
+
+.price #pricebox2 .priceline span {
+    font-size: 16px;
+    color: white;
+    font-weight: normal;
+    font-family: poppins;
+}
+
+.price .row2 #pricebox2 li {
+
+    font-size: 15px;
+    font-family: poppins;
+    font-weight: 300;
+    color: white;
+}
+
+@media (max-width: 1366px) {
+
+    .price .row2 a.request {
+        text-decoration: none;
+        padding: 10px 28px;
+        background: #175cff;
+        border-radius: 10px;
+        color: white;
+        border: 2px solid transparent;
+        background-clip: padding-box;
+        width: 63%;
+        text-align: center;
+        transition: all 0.5s ease;
+    }
+    
+}
+@media (max-width: 1100px) {
+
+
+.price .row2 .pricebox {
+    padding: 40px;
+    display: flex;
+    width: 33.33%;
+    flex-direction: column;
+}
+
+.price .row2 a.request {
+
+    width: 80%;
+
+}
+
+}
+@media (max-width: 991px) {
+
+
+.price .priceline span.price {
+    font-size: 30px;
+    font-weight: 600;
+    font-family: 'Poppins';
+    background-color: transparent;
+}
+
+.price #pricebox2 .priceline span.price {
+    font-size: 30px;
+    font-weight: 600;
+    font-family: 'Poppins';
+    background-color: transparent;
+    color: white;
+}
+
+}
+
+@media (max-width: 880px) {
+
+    .price .row2 {
+        display: grid;
+        flex-direction: column;
+        justify-content: center;
+        grid-template-columns: repeat(2, 1fr);
+        padding-top: 40px;
+        gap: 20px;
+    }
+    .price .row2 .pricebox {
+        
+        width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+
+
+    .price .container {
+        
+        padding: 60px 30px;
+    }
+
+    .price .row1 h2 {
+        font-size: 25px;
+        font-family: poppins;
+        font-weight: 600;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .price .row2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        grid-template-columns: repeat(2, 1fr);
+        padding-top: 40px;
+        gap: 20px;
+    }
+
+}
+
+
+/* END PRICE SECTION */
